--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,9 @@ ul {
   padding-left: 9px;
   padding-top: 6px;
 }
-.icon-main{
+/* .icon-main{
  width: 60px;
-}
+} */
 .weather-info strong {
   font-family: Google Sans, arial, sans-serif;
   color: #202124;
