--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,7 +1,7 @@
 .weather-forecast {
     margin: 20px 0;
     text-align: center;
-    color: #000;
+    color: #70757a;
 }
 .max-temperature {
     font-size: 14px;
